--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\diego\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\jj-08\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
